SobelFilter/results_SobelFilter_prv/OUTPUTS/out_1_252_3.txt
Platform 0 : Advanced Micro Devices, Inc.
input image  = 512 x 512 chars 
input image size = 262144 bytes 
faulty element = (19 6)   
Platform found : Advanced Micro Devices, Inc.

Selected Platform Vendor : Advanced Micro Devices, Inc.
Device 0 : Ellesmere Device ID is 0x1e91b40
MAX_COMPUTE_UNIT =  36
OpenCL 1.2 AMD-APP (2671.3)
 
			BUILD LOG
 ************************************************
/tmp/OCL29830T3.cl:87:25: error: expected ';' in 'for' statement specifier
for (int i = 0; i < 100 i++){
                        ^
1 error generated.

error: Clang front-end compilation failed!
Frontend phase failed compilation.
Error: Compiling CL to IR

 ************************************************
Error: clBuildProgram failed. Error code : CL_BUILD_PROGRAM_FAILURE
Location : /opt/AMDAPPSDK-2.9-1/samples/opencl/cl/SobelFilter/../../../../include/SDKUtil/CLUtil_m.hpp:812
Error: buildOpenCLProgram() failed
Location : /opt/AMDAPPSDK-2.9-1/samples/opencl/cl/SobelFilter/SobelFilter.cpp:304
